# nestty

./: .gitignore  Cargo.toml
docs/: decisions.md  gui-daemon-protocol.md  harness-integration.md  linux-app.md  macos-app.md  macos-daemon-migration-plan.md  roadmap.md  troubleshooting.md
nestty-cli/: Cargo.toml
nestty-cli/src/: commands.rs  main.rs
nestty-cli/src/plugin_cmds/: calendar.rs  jira.rs  mod.rs  recent.rs  slack.rs
nestty-core/: Cargo.toml
nestty-core/src/: action_registry.rs  config.rs  event_bus.rs  lib.rs  notifier.rs  paths.rs  plugin.rs  thread_pool.rs  trigger.rs
nestty-daemon/src/: daemon_trigger_sink.rs  gui_registry.rs  lib.rs  main.rs  socket.rs  trigger_pump.rs  trigger_sink.rs
nestty-linux/: Cargo.toml
nestty-linux/src/: gui_client.rs  main.rs  socket.rs  tabs.rs  url_click.rs  window.rs
nestty-macos/Sources/CNesttyFFI/: dummy.c
nestty-macos/Sources/CNesttyFFI/include/: module.modulemap  nestty_ffi.h
nestty-macos/Sources/CNesttyTerm/include/: nestty_term.h
nestty-macos/Sources/Nestty/: ActionRegistry.swift  AlacrittyTerminalViewController.swift  AppDelegate.swift  AutoSpawn.swift  BackgroundRotator.swift  ClaudeStart.swift  CommandPalette.swift  Config.swift  ConfigWatcher.swift  ContextService.swift  DaemonClient.swift  EventBus.swift  FFIBridge.swift  FileLock.swift  Keybindings.swift  NesttyApp.swift  NesttyPanel.swift  NesttyPaths.swift  PaneManager.swift  PluginManifest.swift  PluginPanelController.swift  PluginSupervisor.swift  SendableBox.swift  SocketServer.swift  SplitNode.swift  StatusBarView.swift  StatusModuleRunner.swift  TabBarView.swift  TabViewController.swift  TerminalViewController.swift  Theme.swift  URLClickHelper.swift  WebViewController.swift  WebViewJS.swift
nestty-term/: Cargo.toml
nestty-term/src/: lib.rs
nestty-term/tests/: pty_round_trip.rs
plugins/git/: plugin.toml  triggers.example.toml
plugins/git/src/: main.rs  watcher.rs
scripts/: e2e-daemon-client.sh  install-macos.sh
scripts/stress/: colors-unicode.sh  osc.sh  scroll-race.sh  throughput.sh  tui-loop.sh
spikes/macos-renderer-spike/: Cargo.toml
spikes/macos-renderer-spike/Swift/: Package.swift
spikes/macos-renderer-spike/Swift/.build/: build.db  debug.yaml
spikes/macos-renderer-spike/Swift/.build/arm64-apple-macosx/debug/: SpikeApp  plugin-tools-description.json
spikes/macos-renderer-spike/Swift/.build/arm64-apple-macosx/debug/CNesttyTermSpike.build/: dummy.c.d
spikes/macos-renderer-spike/Swift/.build/arm64-apple-macosx/debug/ModuleCache/26CE1UCJGTY4J/: Accessibility-14JBEP228SSWD.pcm  ApplicationServices-1CRCAN744IO4N.pcm  CFNetwork-31P8GDC5EWL41.pcm  CNesttyTermSpike-CGAJ8S6UF7YH.pcm  CUPS-2KH16NWVLNVO0.pcm  ColorSync-1KWH2T10UXMVF.pcm  CoreData-3U3WCU0AV8KFN.pcm  CoreFoundation-1YUXQIQY0O2PG.pcm  CoreGraphics-3BVRDEA9TPJO6.pcm  MachO-1E48RKM8MIOQ3.pcm  (+46 more)
spikes/macos-renderer-spike/Swift/.build/arm64-apple-macosx/debug/Modules/: SpikeApp.swiftdoc  SpikeApp.swiftmodule  SpikeApp.swiftsourceinfo
spikes/macos-renderer-spike/Swift/.build/arm64-apple-macosx/debug/SpikeApp.build/: SpikeApp.emit-module.d  main.d  main.swiftdeps  master.priors  output-file-map.json  sources
spikes/macos-renderer-spike/Swift/.build/arm64-apple-macosx/debug/SpikeApp.product/: Objects.LinkFileList
spikes/macos-renderer-spike/Swift/Sources/CNesttyTermSpike/: dummy.c
spikes/macos-renderer-spike/Swift/Sources/CNesttyTermSpike/include/: module.modulemap  nestty_term_spike.h
spikes/macos-renderer-spike/Swift/Sources/SpikeApp/: main.swift
spikes/macos-renderer-spike/src/: lib.rs
(+197 files in other folders)
