[workspace]
resolver = "2"
members = [
    "nestty-core",
    "nestty-daemon",
    "nestty-linux",
    "nestty-cli",
    "nestty-ffi",
    "plugins/echo",
    "plugins/kb",
    "plugins/calendar",
    "plugins/slack",
    "plugins/llm",
    "plugins/todo",
    "plugins/git",
    "plugins/discord",
    "plugins/bookmark",
    "plugins/jira",
    # Phase 0 throwaway. Delete with `spikes/macos-renderer-spike/` when
    # Phase 0 signs off and Phase 1's real `nestty-term/` lands.
    "spikes/macos-renderer-spike",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform custom terminal emulator"
repository = "https://github.com/marshallku/nestty"
