[package]
name = "nestty-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "nestctl"
path = "src/main.rs"

[dependencies]
nestty-core = { path = "../nestty-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
semver = "1"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
