[package]
name = "nestty-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
thiserror = "2"
log = "0.4"
libc = "0.2"
crossbeam-channel = "0.5"
