[package]
name = "nestty-term"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust terminal emulator core + C-ABI bridge for nestty-macos. Phase 1 ships a stubbed surface; alacritty_terminal lands in Phase 2 (see docs/macos-renderer-migration-plan.md)."
repository.workspace = true

[lib]
name = "nestty_term"
# staticlib so libnestty_term.a embeds into Nestty.app at link time
# alongside the existing libnestty_ffi.a — proven not to collide by
# the Phase 0 spike. `rlib` lets Rust integration tests link the
# crate normally (without it, tests can't `use nestty_term::*`).
crate-type = ["staticlib", "rlib"]

[dependencies]
# Pinned to a specific minor version because Alacritty maintainers
# don't support external use of this crate as a library
# (alacritty/alacritty#2132). Bumping requires re-verifying the
# `tty::new` + `EventLoop::new` + `Term::renderable_content` API
# shape; see decision #31 R1.
alacritty_terminal = "0.26"
